--- a/charts/actions-runner-controller/templates/deployment.yaml
+++ b/charts/actions-runner-controller/templates/deployment.yaml
@@ -42,6 +42,9 @@ spec:
         {{- if .Values.githubAPICacheDuration }}
         - "--github-api-cache-duration={{ .Values.githubAPICacheDuration }}"
         {{- end }}
+        {{- if .Values.logLevel }}
+        - "--log-level={{ .Values.logLevel }}"
+        {{- end }}
         command:
         - "/manager"
         env:
