--- a/config/webhook/manifests.yaml
+++ b/config/webhook/manifests.yaml
@@ -24,6 +24,7 @@ webhooks:
     - UPDATE
     resources:
     - runners
+  sideEffects: None
 - clientConfig:
     caBundle: Cg==
     service:
@@ -60,6 +61,7 @@ webhooks:
     - UPDATE
     resources:
     - runnerreplicasets
+  sideEffects: None
 
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
@@ -86,6 +88,7 @@ webhooks:
     - UPDATE
     resources:
     - runners
+  sideEffects: None
 - clientConfig:
     caBundle: Cg==
     service:
@@ -122,3 +125,4 @@ webhooks:
     - UPDATE
     resources:
     - runnerreplicasets
+  sideEffects: None
