--- a/runner/Dockerfile.dindrunner
+++ b/runner/Dockerfile.dindrunner
@@ -32,9 +32,11 @@ RUN apt update -y \
     wget \
     zip \
     zstd \
-    python-is-python3 \
     iptables \
     supervisor \
+    python3-pip \
+    && ln -sf /usr/bin/python3 /usr/bin/python \
+    && ln -sf /usr/bin/pip3 /usr/bin/pip \
     && rm -rf /var/lib/apt/list/*
 
 # Runner user
