--- a/runner/Dockerfile.dindrunner
+++ b/runner/Dockerfile.dindrunner
@@ -73,6 +73,7 @@ RUN export ARCH=$(echo ${TARGETPLATFORM} | cut -d / -f2) \
 	docker --version
 
 ENV RUNNER_ASSETS_DIR=/runnertmp
+ENV HOME=/home/runner
 
 # Runner download supports amd64 as x64
 #
@@ -109,6 +110,9 @@ RUN export ARCH=$(echo ${TARGETPLATFORM} | cut -d / -f2) \
 VOLUME /var/lib/docker
 
 COPY --chown=runner:docker patched $RUNNER_ASSETS_DIR/patched
+
+# Add the Python "User Script Directory" to the PATH
+ENV PATH="${PATH}:${HOME}/.local/bin"
 
 # No group definition, as that makes it harder to run docker.
 USER runner
