Fix actions-runner-dind not to fail setting up MTU (#589)
Fixes #588

--- a/runner/Dockerfile.dindrunner
+++ b/runner/Dockerfile.dindrunner
@@ -19,6 +19,7 @@ RUN apt update -y \
     libunwind8 \
     locales \
     netcat \
+    net-tools \
     openssh-client \
     parallel \
     python3-pip \
