ci: ignore doc changes (#604)

--- a/.github/workflows/on-push-lint-charts.yml
+++ b/.github/workflows/on-push-lint-charts.yml
@@ -4,6 +4,7 @@ on:
   push:
     paths:
       - 'charts/**'
+      - '!charts/docs/**'
       - '.github/**'
       - '!.github/*.md'
   workflow_dispatch:
