ci: adding negative paths for publish

--- a/.github/workflows/on-push-master-publish-chart.yml
+++ b/.github/workflows/on-push-master-publish-chart.yml
@@ -7,6 +7,8 @@ on:
       - main # assume that the branch name may change in future
     paths:
       - 'charts/**'
+      - '!charts/actions-runner-controller/docs/**'
+      - '!charts/actions-runner-controller/*.md'
       - '.github/**'
       - '!.github/*.md'
   workflow_dispatch:
