--- a/charts/actions-runner-controller/Chart.yaml
+++ b/charts/actions-runner-controller/Chart.yaml
@@ -15,20 +15,16 @@ type: application
 # This is the chart version. This version number should be incremented each time you make changes
 # to the chart and its templates, including the app version.
 # Versions are expected to follow Semantic Versioning (https://semver.org/)
-version: 0.11.0
+version: 0.12.0
 
 # Used as the default manager tag value when no tag property is provided in the values.yaml
-appVersion: 0.18.2
+appVersion: 0.19.0
 
-home: https://github.com/summerwind/actions-runner-controller
+home: https://github.com/actions-runner-controller/actions-runner-controller
 
 sources:
-  - https://github.com/summerwind/actions-runner-controller
+  - https://github.com/actions-runner-controller/actions-runner-controller
 
 maintainers:
-  - name: summerwind
-    email: contact@summerwind.jp
-    url: https://github.com/summerwind
-  - name: funkypenguin
-    email: davidy@funkypenguin.co.nz
-    url: https://www.funkypenguin.co.nz
+  - name: actions-runner-controller
+    url: https://github.com/actions-runner-controller
