--- a/charts/actions-runner-controller/values.yaml
+++ b/charts/actions-runner-controller/values.yaml
@@ -113,6 +113,7 @@ scope:
 githubWebhookServer:
   enabled: false
   replicaCount: 1
+  syncPeriod: 10m
   secret:
     create: true
     name: "github-webhook-server"
