--- a/config/webhook/manifests.v1beta1.yaml
+++ b/config/webhook/manifests.v1beta1.yaml
@@ -4,14 +4,13 @@ apiVersion: admissionregistration.k8s.io/v1beta1
 kind: MutatingWebhookConfiguration
 metadata:
   creationTimestamp: null
-  name: {{ include "actions-runner-controller.fullname" . }}-mutating-webhook-configuration
-  annotations:
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "actions-runner-controller.servingCertName" . }}
+  name: mutating-webhook-configuration
 webhooks:
-- clientConfig:
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /mutate-actions-summerwind-dev-v1alpha1-runner
   failurePolicy: Fail
   name: mutate.runner.actions.summerwind.dev
@@ -26,10 +25,11 @@ webhooks:
     resources:
     - runners
   sideEffects: None
-- clientConfig:
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /mutate-actions-summerwind-dev-v1alpha1-runnerdeployment
   failurePolicy: Fail
   name: mutate.runnerdeployment.actions.summerwind.dev
@@ -43,11 +43,12 @@ webhooks:
     - UPDATE
     resources:
     - runnerdeployments
-  sideEffects: None
-- clientConfig:
+  sideEffects: null
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /mutate-actions-summerwind-dev-v1alpha1-runnerreplicaset
   failurePolicy: Fail
   name: mutate.runnerreplicaset.actions.summerwind.dev
@@ -62,39 +63,19 @@ webhooks:
     resources:
     - runnerreplicasets
   sideEffects: None
-- clientConfig:
-    service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
-      path: /mutate-runner-set-pod
-  failurePolicy: Fail
-  name: mutate-runner-pod.webhook.actions.summerwind.dev
-  rules:
-  - apiGroups:
-    - ""
-    apiVersions:
-    - v1
-    operations:
-    - CREATE
-    resources:
-    - pods
-  sideEffects: None
-  objectSelector:
-    matchLabels:
-      "actions-runner-controller/inject-registration-token": "true"
+
 ---
 apiVersion: admissionregistration.k8s.io/v1beta1
 kind: ValidatingWebhookConfiguration
 metadata:
   creationTimestamp: null
-  name: {{ include "actions-runner-controller.fullname" . }}-validating-webhook-configuration
-  annotations:
-    cert-manager.io/inject-ca-from: {{ .Release.Namespace }}/{{ include "actions-runner-controller.servingCertName" . }}
+  name: validating-webhook-configuration
 webhooks:
-- clientConfig:
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /validate-actions-summerwind-dev-v1alpha1-runner
   failurePolicy: Fail
   name: validate.runner.actions.summerwind.dev
@@ -109,10 +90,11 @@ webhooks:
     resources:
     - runners
   sideEffects: None
-- clientConfig:
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /validate-actions-summerwind-dev-v1alpha1-runnerdeployment
   failurePolicy: Fail
   name: validate.runnerdeployment.actions.summerwind.dev
@@ -126,11 +108,12 @@ webhooks:
     - UPDATE
     resources:
     - runnerdeployments
-  sideEffects: None
-- clientConfig:
+  sideEffects: null
+- admissionReviewVersions: null
+  clientConfig:
     service:
-      name: {{ include "actions-runner-controller.webhookServiceName" . }}
-      namespace: {{ .Release.Namespace }}
+      name: webhook-service
+      namespace: system
       path: /validate-actions-summerwind-dev-v1alpha1-runnerreplicaset
   failurePolicy: Fail
   name: validate.runnerreplicaset.actions.summerwind.dev
