--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runnerdeployments.yaml
@@ -632,6 +632,8 @@ spec:
                           type: object
                         dockerdWithinRunnerContainer:
                           type: boolean
+                        enableServiceLinks:
+                          type: boolean
                         enterprise:
                           pattern: ^[^/]+$
                           type: string
