--- a/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
+++ b/charts/actions-runner-controller/crds/actions.summerwind.dev_runners.yaml
@@ -577,6 +577,8 @@ spec:
                   type: object
                 dockerdWithinRunnerContainer:
                   type: boolean
+                enableServiceLinks:
+                  type: boolean
                 enterprise:
                   pattern: ^[^/]+$
                   type: string
